@@ -11,7 +11,7 @@
 
   <groupId>io.smallrye.reactive</groupId>
   <artifactId>smallrye-reactive-messaging</artifactId>
-  <version>2.9.0-SNAPSHOT</version>
+  <version>2.10.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>SmallRye Reactive Messaging</name>
@@ -71,7 +71,7 @@
 
     <smallrye-config.version>1.10.0</smallrye-config.version>
     <smallrye-metrics.version>2.4.6</smallrye-metrics.version>
-    <smallrye-common.version>1.5.0</smallrye-common.version>
+    <smallrye-common.version>1.6.0</smallrye-common.version>
     <smallrye-health.version>2.2.6</smallrye-health.version>
     <smallrye-testing.version>0.1.0</smallrye-testing.version>
     <smallrye-fault-tolerance.version>4.3.2</smallrye-fault-tolerance.version>
@@ -81,8 +81,8 @@
 
     <jboss-log-manager.version>2.1.18.Final</jboss-log-manager.version>
 
-    <opentelemetry.version>1.0.0</opentelemetry.version>
-    <opentelemetry-semver.version>1.0.0-alpha</opentelemetry-semver.version>
+    <opentelemetry.version>1.0.1</opentelemetry.version>
+    <opentelemetry-semver.version>1.0.1-alpha</opentelemetry-semver.version>
 
     <smallrye-reactive-converter-api.version>1.5.0</smallrye-reactive-converter-api.version>
     <smallrye-vertx-mutiny-clients.version>1.5.0</smallrye-vertx-mutiny-clients.version>
@@ -338,11 +338,6 @@
       <version>${version.junit5}</version>
     </dependency>
     <dependency>
-      <groupId>org.junit.vintage</groupId>
-      <artifactId>junit-vintage-engine</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <scope>test</scope>
@@ -519,6 +514,16 @@
           </plugin>
         </plugins>
       </build>
+    </profile>
+
+    <profile>
+      <id>java16</id>
+      <activation>
+        <jdk>16</jdk>
+      </activation>
+      <properties>
+        <argLine>--illegal-access=permit</argLine>
+      </properties>
     </profile>
   </profiles>
 </project>
